test/files/neg/inductive-implicits8.scala
@annotation.inductive
trait Foo[T]
object Foo {
  implicit def fooInt: Foo[Int] = ???
}

object Test {
  implicitly[Foo[Int]]
}
