test/files/neg/inductive-implicits8.check
inductive-implicits8.scala:8: error: Noninductive implicit expansion for type Foo[Int]
  implicitly[Foo[Int]]
            ^
one error found
